# aoc2021

./: .gitignore  Day 1 - Sonar Sweep.ipynb  Day 2 - Dive!.ipynb  pyproject.toml
aoc_utilities/: puzzle_input.py
solutions/: Day 02 - Dive!.ipynb  Day 03 - Binary Diagnostic.ipynb  Day 05 - Hydrothermal Venture.ipynb  Day 07 - The Treachery of Whales.ipynb  Day 08 - Seven Segment Search.ipynb  Day 1 - Sonar Sweep.ipynb  Day 10 - Syntax Scoring.ipynb  Day 11 - Dumbo Octopus.ipynb  Day 12 - Passage Pathing.ipynb  Day 13 - Transparent Origami.ipynb  Day 14 - Extended Polymerization.ipynb  Day 15 - Chiton.ipynb  Day 16 - Packet Decoder.ipynb  Day 2 - Dive!.ipynb  Day 3 - Binary Diagnostic.ipynb  Day 4 - Giant Squid.ipynb  Day 5 - Hydrothermal Venture.ipynb  Day 6 - Lanternfish.ipynb  Day 7 - The Treachery of Whales.ipynb  Day 8 - Seven Segment Search.ipynb  Day 9 - Smoke Basin.ipynb
