[tool.poetry]
name = "aoc2021"
version = "0.1.0"
description = "Solutions to Advent of Code 2021 problems"
authors = ["Dan Moore <hello@danielmoore.xyz>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.3.4"
jupyterlab = "^3.2.4"

[tool.poetry.dev-dependencies]
ipython = "^7.30.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
